--- a/css/sobre.css
+++ b/css/sobre.css
@@ -21,7 +21,7 @@ body{
 
     .barra ul li{
     list-style: none;
-    margin: 0px 100px;
+    margin: 0px 60px;
     transition: 0.5s;
     
     }
@@ -31,7 +31,7 @@ body{
     display: block;
     position: relative;
     text-decoration: none;
-    padding: 5px 47px;
+    padding: 5px 60px;
     color: white;
     font-size: 14px;
     text-transform: uppercase;
@@ -70,6 +70,14 @@ body{
     
     }
 
+
+
+    .donate{
+        margin-top: -2px !important;
+        color: green !important;
+        font-size: 22px !important;
+        font-family: none;
+    }
 
 
 
@@ -155,7 +163,7 @@ body{
 
     }
 
-.artigos{
+.artigos {
     color: white;
     border: 4px  solid white;
     border-top: 0px;
@@ -163,13 +171,81 @@ body{
     margin: 10px 20px 0px 20px;
     padding: 0px 10px;
 }
-.artigos h2{
+.artigos h2 {
     text-transform: uppercase;
 }
 
+.sobreLogo{
+    position: relative;
+    left: 40%;
+    height: 80px;
+    width: 80px;
+}
+
+.imgDoacao{
+    position: relative;
+    left: 5%;
+    height: 260px;
+    width: 400px;
+    border: 3px solid rgb(255, 255, 255);
+    border-bottom: 0;
+
+    margin-bottom: 25px;
+   
+}
+.projeto_list{
+    height: 35px;
+    width: 35px;
+    margin-bottom: -5px;
+}
+
+#infoProjeto label{
+    text-transform: uppercase;
+    font-size: 18px;
+}
 
 
+.imgProjetos{
+    position: relative;
+    left: 22%;
+    border: 4px solid white;
+    height: 200px;
+    width: 200px;
+    margin-bottom: 20px;
+    margin-top: 35px;
+}
 
-    
+
+#infoStaff h3{
+    color: white;
+    text-transform: uppercase;
+}
+
+.staff_perfil{
+    display: flex;
+    margin: 30px 20px;
+    color: white;
+    border: 2px solid white;
+    padding: 5px 20px;
+}
+
+.staff_perfil p {
+    text-align: justify;
+    margin-left: 10px;
+    margin-top: -17px;
+
+}
+
+.imgStaff{
+    margin-top: 5px;
+    height: 130px;
+    width: 130px;
+    margin-left: -6px;
+    border: 4px solid white;
+    border-radius: 100%;
+    margin-bottom: 3px;
+   
+
+}
 
     
