--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 body{
-    background: url(../image/fundo4.jpg);
+    background: 
+    url(../image/fundo4.jpg),
+    rgb(32, 32, 32);
     background-size: 1700px 800px;
     background-repeat: no-repeat;
     font-family: 'Oswald', sans-serif;
@@ -92,8 +94,8 @@ body{
     margin-right: 10px;
 }
 .botao{
-    margin: 60px 10px 0px 10px;
-    padding: 60px 20px;
+    margin: 60px 10px 72px 10px;
+    padding: 66px 20px;
     width: 300px;
     text-align: center;
     background: rgba(0, 0, 0, 0.712);
@@ -102,6 +104,7 @@ body{
     color: white;
     display: block;
     transition: all .6s;
+  
     
 }
 .botao:hover{
@@ -113,7 +116,6 @@ body{
     opacity: 1;
     filter: blur(0);
 }
-
 
 
 
@@ -158,6 +160,137 @@ body{
 
 
 
+.div_doa{
+    background: rgb(22, 22, 22);
+    border-bottom: 2px solid green;
+    box-shadow: 3px 3px 5px green;
+}
+
+.doacao{
+    margin-left: 100px;
+    padding: 3px 0px;
+    width: 1000px;
+    color: white;
+    background: rgb(0, 0, 0);
+    display: flex;
+    text-align: center;
+    align-items: center;
+    border-right: 5px solid green;
+    border-left: 6px solid green;
+    
+   
+   
+}
+
+.right{
+    -webkit-transform: skew(30deg) translateX(80px);
+    -ms-transform: skew(30deg) translateX(80px);
+     transform: skew(30deg) translateX(80px);
+}
 
 
+.doacao h1{
+    text-transform: uppercase;
+    color: green;
+    margin-top: 3px;
+    font-size: 25px;
+   
+    
+}
+.doacao p{
+    margin-top: -15px;
+    line-height: 20px;
+    width: 570px;
+    margin-left: 70px;
+  
 
+}
+.descRoda{
+
+    border-right: 2px solid white;
+    width: 700px;
+    height: 100px;
+}
+.doar{
+     margin-top: 10px;
+     position: relative;
+     right: -18%;
+     background: green;
+     color: white;
+     font-size: 18px;
+     height: 50px;
+     width: 200px;
+     border:0px;
+     border-radius: 100px;
+     transition: all .5s;
+    
+ }
+ 
+ .doar:hover{
+    background: #003d00;
+    transition: all .5s;
+    cursor: pointer;
+}
+
+
+.reto{
+    -webkit-transform: skew(-30deg) translateX(0) ;
+    -ms-transform: skew(-30deg) translateX(0) ;
+     transform: skew(-30deg) translateX(0) ;
+}
+
+.mural{
+    background-color: black;
+    color: white;
+    text-align: center;
+    margin: 70px 230px 70px 230px;
+    padding-bottom: 30px;
+    padding-top: 10px;
+    border-top: 5px solid green;
+    animation: piscar 7s linear infinite;
+}
+
+@keyframes piscar{
+    0%{
+        box-shadow: 0;
+    }
+    50%{
+        box-shadow: 3px 3px 50px green;
+    }
+    100%{
+        box-shadow: 0;
+    }
+}
+
+.mural h1{
+    color: green;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    word-spacing: 6px;
+    padding-bottom: 20px;
+    border-bottom: 5px solid green;
+    margin-bottom: 50px;
+}
+.att{
+    position: relative;
+    display: flex;
+    left: 230px;
+    border: 2px solid white;
+    width: 500px;
+    margin-bottom: 30px;
+}
+.att h2{
+    text-transform: uppercase;
+    margin-left: 50px ;
+    color: green;
+}
+.att li{
+    text-align: left;
+    margin-left: 20px;
+}
+.imgAtt{
+    height: 150px;
+    width: 130px;
+    padding: 0px 10px;
+    border-right: 2px solid white;
+}
