--- a/css/servidores.css
+++ b/css/servidores.css
@@ -2,8 +2,9 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Oswald', sans-serif;
-    transition: all .3s;
-    overflow: hidden;
+    overflow-x: hidden;
+   overflow-y: hidden;
+    
 }
 
 .barra ul{
@@ -12,7 +13,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: black;
-    height: 53px;
+    height: 51px;
     display: flex;
     
     }
@@ -63,3 +64,99 @@ body{
     transform: scale(1);
     }
     
+
+
+
+section{
+    position: absolute;
+    width: 100%;
+    height:100vh ;
+    display: flex;
+    border-right: 2px solid black;
+    
+}
+
+section .slide{
+    position: relative;
+    background: #0f0;
+    height: 100%;
+    flex: 1;
+    border-right: 15px solid black;
+    overflow: hidden;
+    transition: .5s ease-in-out;
+}
+
+
+section .slide:hover{
+    flex-grow: 5;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+section #golden{
+    overflow: hidden;
+    
+}
+
+section .slide:nth-child(1){
+    background: url(../image/fundo5.jpg);
+    background-size: 1200px 760px;
+    background-position: center;
+}
+
+section .slide:nth-child(2){
+    background: url(../image/fundo8.jpg);
+    background-size: 1200px 760px;
+    background-position: center;
+}
+
+section .slide .serv{
+    position: sticky;
+    bottom: 0;
+    margin: 50px;
+    padding: 60px;
+    background: black;
+    color: white;
+    display: none;
+   overflow: hidden;
+}
+
+
+
+section .slide:hover .serv{
+transition: .2s;
+display: block;
+   
+}
+
+section .slide .spaceCity {
+    text-align: center;
+    text-transform: uppercase;
+    margin: 250px 90px 0px 90px;
+    font-size: 20px;
+    background: rgba(0, 0, 0, 0.849);
+    overflow: hidden;
+}
+
+section .slide:hover .spaceCity{
+    visibility: hidden;
+    opacity: 0;
+    transition: .5s;
+    transform: translateY(100px);
+}
+
+
+.titGolden{
+    color: gold;
+    margin-top: -20px;
+}
+.titGreen{
+    color: green;
+    margin-top: -20px;
+}
+
+.imgCity{
+    margin-top: 10px;
+    height: 130px;
+    width: 130px;
+}
